objects/Estimate_Template_Line_Items__c/Estimate_Template_Line_Items__c.object-meta.xml
<CustomObject>
    <label>Estimate Template Line Items</label>
    <nameField>
        <label>Estimate Template Line Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estimate Template Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>