objects/Estimate_Template_Line_Items__c/fields/Estimate_Template__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estimate Template</label>
    <referenceTo>Estimate_Template__c</referenceTo>
    <relationshipLabel>Estimate Template Line Items</relationshipLabel>
    <relationshipName>Estimate_Template_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>