objects/Estimate_Template_Line_Items__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Code</label>
    <referenceTo>GL_Code__c</referenceTo>
    <relationshipLabel>Estimate Template Line Items</relationshipLabel>
    <relationshipName>Estimate_Template_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>