objects/Estimate_Template_Line_Items__c/fields/GL_Department__c.field-meta.xml
<CustomField>
    <fullName>GL_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Department</label>
    <referenceTo>GL_Department__c</referenceTo>
    <relationshipLabel>Estimate Template Line Items</relationshipLabel>
    <relationshipName>Estimate_Template_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>