objects/Estimate_Template_Line_Items__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Estimate Template Line Items</relationshipLabel>
    <relationshipName>Estimate_Template_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>